Update .gitignore with entries from cyverse/DE .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,9 @@
 pom.xml
-*jar
+*.jar
 /lib/
 /classes/
-.lein-repl-history
-.lein-deps-sum
-.lein-plugins
 /bin
 /native
-/.lein-failures
 /checkouts
 /.classpath
 /.project
@@ -15,16 +11,20 @@ pom.xml
 /apps.spec
 /apps*.tar.gz
 /target
+.lein-*
 *~
 \#*
+*.swp
 .dir-locals.el
 .*.eld
 .nrepl-port
 apps.properties
 .hgignore
-CHANGELOG.md
-LICENSE
-README.md
-/doc/
 test2junit
 build.xml
+.idea
+*.iml
+*.ipr
+*.iws
+.DS_Store
+*.class
