DD-17: added ephemeral storage requests and limits

--- a/k8s/apps.yml
+++ b/k8s/apps.yml
@@ -53,9 +53,11 @@ spec:
           requests:
             cpu: "100m"
             memory: "1Gi"
+            ephemeral-storage: "1Gi"
           limits:
             cpu: "3000m"
             memory: "3Gi"
+            ephemeral-storage: "1Gi"
         args:
           - --config
           - /etc/iplant/de/apps.properties
