--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,14 +1,17 @@
-apiVersion: skaffold/v1
+apiVersion: skaffold/v3
 kind: Config
 metadata:
   name: apps
-deploy:
-  kubectl:
-    manifests:
-    - k8s/apps.yml
 build:
+  artifacts:
+    - image: harbor.cyverse.org/de/apps
   tagPolicy:
     gitCommit: {}
-  artifacts:
-  - image: harbor.cyverse.org/de/apps
   local: {}
+  platforms:
+    - linux/amd64
+manifests:
+  rawYaml:
+    - k8s/apps.yml
+deploy:
+  kubectl: {}
