initial version to support adding lists of GPU models associated with tools/containers

--- a/test.properties
+++ b/test.properties
@@ -41,6 +41,9 @@ apps.batch.path-list.info-type = ht-analysis-path-list
 apps.batch.path-list.max-paths = 16
 apps.batch.path-list.max-size  = 1048576
 
+# Tool settings.
+apps.tools.valid-gpu-models = ["NVIDIA-A16", "NVIDIA-A100-SXM4-40GB", "NVIDIA-A100-SXM4-80GB"]
+
 # Agave connection settings.
 apps.agave.base-url             = https://agave.iplantc.org
 apps.agave.key                  = not_a_key
